# readme-badge-extractor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: test.yaml
readme_badge_extractor/: badge.py  extractor.py  includer.py
readme_badge_extractor/test/: test_badge.py  test_extractor.py
readme_badge_extractor/util/: log.py
