# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = readme-badge-extractor
description = Extract badges from a github readme and include them somewhere else
author = Kilian Lieret
author_email = kilian.lieret@posteo.de
maintainer = Kilian Lieret
maintainer_email = kilian.lieret@posteo.de
url = https://github.com/klieret/readme-badge-extractor
version = file: readme_badge_extractor/version.txt
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt
project_urls =
    Bug Tracker =   https://github.com/klieret/readme-badge-extractor/issues
    Source Code =   https://github.com/klieret/readme-badge-extractor/
keywords =
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    colorlog
include_package_data = True
python_requires = >=3.6
zip_safe = False
